
[project]
name = "scrapermcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "markdownify>=0.14.1",
    "mcp[cli]>=1.2.0",
    "tenacity>=8.2.0",
    "lxml>=5.3.0,<6",
    "lxml-html-clean>=0.4.1",
    "fastmcp>=2.12.0",
    "smithery>=0.4.2",
]


